data_transfer modifier has no effect when called "in a dependency chain" #46508

Closed
opened 2015-10-16 15:55:28 +02:00 by Gaia Clary · 5 comments
Member

System Information
Windows-7 nvidia-titan

Blender Version
Broken: (development after 2.76 release)
Worked: unknown

Short description of error

I have 3 objects a, b, c.
i add 2 data_transfer modifiers, one on a (named moda), one on b (named modb)

now i setup a dependency as follows:

moda.object=b
modb.object=c

enable face corner data on both modifiers
enable "custom normals" on both modifiers
restrict the range to 0.01 on both modifiers

I expect that the adjacent boundary edge normals of the objects get welded.
But this happens only for one of the modifiers, but not for the other.

Exact steps for others to reproduce the error

Open the blend file welding3.blend and inspect the 2 object sets (a,b,c) and (1,2,3) In both cases the normals are welded for the first data_transfer modifier, but not for the second.

I am not sure what i am doing wrong. I suspect the problem is related to shape keys? Or is this a simple user error or even expected behavior?

**System Information** Windows-7 nvidia-titan **Blender Version** Broken: (development after 2.76 release) Worked: unknown **Short description of error** I have 3 objects a, b, c. i add 2 data_transfer modifiers, one on a (named moda), one on b (named modb) now i setup a dependency as follows: moda.object=b modb.object=c enable face corner data on both modifiers enable "custom normals" on both modifiers restrict the range to 0.01 on both modifiers I expect that the adjacent boundary edge normals of the objects get welded. But this happens only for one of the modifiers, but not for the other. **Exact steps for others to reproduce the error** Open the blend file [welding3.blend](https://archive.blender.org/developer/F245474/welding3.blend) and inspect the 2 object sets (a,b,c) and (1,2,3) In both cases the normals are welded for the first data_transfer modifier, but not for the second. I am not sure what i am doing wrong. I suspect the problem is related to shape keys? Or is this a simple user error or even expected behavior?
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Bastien Montagne was assigned by Gaia Clary 2015-10-16 15:55:28 +02:00
Author
Member

Added subscriber: @GaiaClary

Added subscriber: @GaiaClary

Found the trick - it’s object transformation (apply rotation on your c/3 objects and everything is OK).

This is supposed to work though, checking further.

Found the trick - it’s object transformation (apply rotation on your `c`/`3` objects and everything is OK). This is supposed to work though, checking further.

This issue was referenced by 8172712841

This issue was referenced by 8172712841975014e28219da91a41c7c5b074d5a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46508
No description provided.