source/blender/blenkernel/intern/data_transfer_intern.h
@@ -45,7 +45,7 @@ void data_transfer_layersmapping_add_item(
         const float mix_factor, const float *mix_weights,
         const void *data_src, void *data_dst, const int data_src_n, const int data_dst_n,
         const size_t elem_size, const size_t data_size, const size_t data_offset, const uint64_t data_flag,
-        cd_datatransfer_interp interp);
+        cd_datatransfer_interp interp, void *interp_data);
 
 /* Type-specific. */
 
@@ -54,5 +54,11 @@ bool data_transfer_layersmapping_vgroups(
         const int num_elem_dst, const bool use_create, const bool use_delete,
         struct Object *ob_src, struct Object *ob_dst, struct CustomData *cd_src, struct CustomData *cd_dst,
         const bool use_dupref_dst, const int fromlayers, const int tolayers);
+
+/* Defined in customdata.c */
+void customdata_data_transfer_interp_normal_normals(
+        const CustomDataTransferLayerMap *laymap, void *data_dst,
+        const void **sources, const float *weights, const int count,
+        const float mix_factor);
 
 #endif  /* __DATA_TRANSFER_INTERN_H__ */
